# mlops_on_gcp

./: README.md  pyproject.toml
part1/: .gitignore  download_data.py  predict.py  setup.sh  training_pipeline.py
part2/: config.py  feature_store_batch_ingest.py  predict.py  setup_feature_store.py  training_pipeline.py
part2/feature_pipeline/: README.md  main.py  setup.py
part2/feature_pipeline/feature_pipeline/: batch_feature_pipeline.py  entities.py  helpers.py
